5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3997/executions/1671_1879.log
== TEST (2019-04-28 23:38:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne == float(input("Digite nmr de hrs extras: "))
nf == float(input("Digite nmr de hrs q faltou: "))

H == (ne) - 1/4 * (nf)

if(H>400):
	G == 500.00
	print("R$", round(G,2))
elif(H<=400):
	G == 100.00
	print("R$", round(G,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ne == float(input())
NameError: name 'ne' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:39:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne == float(input("Digite nmr de hrs extras: "))
nf == float(input("Digite nmr de hrs q faltou: "))

print(ne, "extras e", nf, "de falta")

H == (ne) - 1/4 * (nf)

if(H>400):
	G == 500.00
	print("R$", round(G,2))
elif(H<=400):
	G == 100.00
	print("R$", round(G,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ne == float(input())
NameError: name 'ne' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:40:34) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne == float(input("Digite nmr de hrs extras: "))
nf == float(input("Digite nmr de hrs q faltou: "))

print(ne, "extras", "e", nf, "de falta")

H == (ne) - 1/4 * (nf)

if(H>400):
	G == 500.00
	print("R$", round(G,2))
elif(H<=400):
	G == 100.00
	print("R$", round(G,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ne == float(input())
NameError: name 'ne' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:41:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne = float(input("Digite nmr de hrs extras: "))
nf = float(input("Digite nmr de hrs q faltou: "))

print(ne, "extras", "e", nf, "de falta")

H == (ne) - 1/4 * (nf)

if(H>400):
	G == 500.00
	print("R$", round(G,2))
elif(H<=400):
	G == 100.00
	print("R$", round(G,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    H == (ne) - 1/4 * (nf)
NameError: name 'H' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:41:26) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne = float(input("Digite nmr de hrs extras: "))
nf = float(input("Digite nmr de hrs q faltou: "))

print(ne, "extras", "e", nf, "de falta")

H = (ne) - 1/4 * (nf)

if(H>400):
	G == 500.00
	print("R$", round(G,2))
elif(H<=400):
	G == 100.00
	print("R$", round(G,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    G == 500.00
NameError: name 'G' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:41:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne = float(input("Digite nmr de hrs extras: "))
nf = float(input("Digite nmr de hrs q faltou: "))

print(ne, "extras", "e", nf, "de falta")

H = (ne) - 1/4 * (nf)

if(H>400):
	G = 500.00
	print("R$", round(G,2))
elif(H<=400):
	G = 100.00
	print("R$", round(G,2))

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 23:41:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne = float(input("Digite nmr de hrs extras: "))
nf = float(input("Digite nmr de hrs q faltou: "))

print(ne, "extras", "e", nf, "de falta")

H = (ne) - 1/4 * (nf)

if(H>400):
	G = 500.00
	print("R$", round(G,2))
elif(H<=400):
	G = 100.00
	print("R$", round(G,2))

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 23:42:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
ne = float(input("Digite nmr de hrs extras: "))
nf = float(input("Digite nmr de hrs q faltou: "))

print(ne, "extras", "e", nf, "de falta")

H = (ne) - 1/4 * (nf)

if(H>400):
	G = 500.00
	print("R$", round(G,2))
elif(H<=400):
	G = 100.00
	print("R$", round(G,2))

-- EXECUTION TIME:
0.140035
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
